--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,10 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context="com.fevly.kasuariboard.MainActivity">
 
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="Shop"
+        android:text="Shop"
+        android:drawableTop="@drawable/bagofmoney"
+        app:tint="#ff0000" />
     <!-- activity_main.xml -->
     <GridLayout
         android:id="@+id/chessboard"
