--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,44 +1,50 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context="com.fevly.kasuariboard.MainActivity">
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-      >
-    <Button
-        android:id="@+id/connect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="Shop"
-        android:text="Shop"
-        android:drawableTop="@drawable/bagofmoney"
-        app:tint="#ff0000" />
-    <Button
-        android:id="@+id/shop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="connect"
-        android:text="Connect"
-        android:drawableTop="@drawable/network"
-        app:tint="#ff0000" />
-    </LinearLayout>
-    <!-- activity_main.xml -->
-    <GridLayout
-        android:id="@+id/chessboard"
+    android:orientation="vertical"
+    android:background="@drawable/outerbackground"
+    tools:context="com.fevly.kasuarichess.MainActivity">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/boardpoker"
-        android:scaleType="centerCrop"
-        android:columnCount="9"
-        android:rowCount="4"
+      >
 
-        ></GridLayout>
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:alpha="0.9">
 
+            <!--            <androidx.appcompat.widget.Toolbar-->
+            <!--                android:id="@+id/toolbar"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="?attr/actionBarSize"-->
+            <!--                android:background="?attr/colorPrimary"-->
+            <!--                app:layout_scrollFlags="scroll|enterAlways" />-->
 
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs"
+
+                android:background="@color/black"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:contentDescription="jhgjhgjh"
+                app:tabGravity="fill"
+                app:tabMode="fixed"
+               />
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="jhgjhgjh"
+
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+
+            />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </LinearLayout>
